--- a/math/index.html
+++ b/math/index.html
@@ -7,7 +7,10 @@
 
 </head>
 <body>
-    <h1>Lizzy's Purchase</h1>
+
+
+
+    <h2>Lizzy's Purchase</h2>
     <p>Lizzy pays $7 for 3 items. The price of each item is different and is a whole number. How much is the most expensive item?</p>
     <form id="answerForm">
         <input type="radio" id="optionA" name="answer" value="A">
@@ -28,9 +31,7 @@
     <img src="video.png" alt="youtube" width="28"><a href="https://www.youtube.com/watch?v=UlrqlJ7qb5c" target="_blank">Watch the video</a> by Eric J.
 <p></p>
 <p></p>
-<h2>Next challenge</h2>
-<p>Tile's dimension</p>
-<img src="Next.jpg" alt="Image" width="500">
+
     <script>
         document.getElementById("answerForm").addEventListener("submit", function(event) {
             event.preventDefault();
@@ -38,9 +39,54 @@
             if (selectedAnswer) {
                 if (selectedAnswer.value === "C") {
                     alert("Congratulations! You selected the correct answer: $4.");
+                    document.getElementById("feedback").innerHTML = "";
                 } else {
                     document.getElementById("feedback").innerHTML = "Sorry, that's not correct. Please try again.";
                     document.getElementById("feedback").style.display = "block";
+                }
+            } else {
+                alert("Please select an answer.");
+            }
+        });
+    </script>
+
+
+
+
+<h2>Tile's dimension</h2>
+
+<img src="Next.jpg" alt="Image" width="500">
+    <form id="answerForm2">
+        <input type="radio" id="optionA" name="answer2" value="A">
+        <label for="optionA">3cm</label><br>
+        <input type="radio" id="optionB" name="answer2" value="B">
+        <label for="optionB">4cm</label><br>
+        <input type="radio" id="optionC" name="answer2" value="C">
+        <label for="optionC">5cm</label><br>
+        <input type="radio" id="optionD" name="answer2" value="D">
+        <label for="optionD">6cm</label><br>
+        <input type="radio" id="optionE" name="answer2" value="E">
+        <label for="optionE">7cm</label><br><br>
+        <button type="submit">Submit Answer</button>
+    </form>
+<div id="feedback2" style="display: none; margin-top: 10px;"></div>
+<p>If you need help understanding how to solve it, watch this video:</p>
+    <img src="video.png" alt="youtube" width="28"><a href="https://www.youtube.com/watch?v=UlrqlJ7qb5c" target="_blank">Watch the video</a> by Eric J.
+<p></p>
+<p></p>
+
+
+    <script>
+        document.getElementById("answerForm2").addEventListener("submit", function(event) {
+            event.preventDefault();
+            let selectedAnswer = document.querySelector('input[name="answer2"]:checked');
+            if (selectedAnswer) {
+                if (selectedAnswer.value === "D") {
+                    alert("Congratulations! You selected the correct answer: 6cm.");
+                    document.getElementById("feedback2").innerHTML = "";
+                } else {
+                    document.getElementById("feedback2").innerHTML = "Sorry, that's not correct. Please try again.";
+                    document.getElementById("feedback2").style.display = "block";
                 }
             } else {
                 alert("Please select an answer.");
