--- a/math/index.html
+++ b/math/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lizzy's Purchase</title><p>Question #7, Math Kangaoo 2024</p>
+    <title>Math Kangaoo 2024</title>
 
 </head>
 <body>
 
 
-
+    <p>Question #7</p>
     <h2>Lizzy's Purchase</h2>
     <p>Lizzy pays $7 for 3 items. The price of each item is different and is a whole number. How much is the most expensive item?</p>
     <form id="answerForm">
@@ -52,9 +52,8 @@
 
 
 
-
+<p>Question #7</p>
 <h2>Tile's dimension</h2>
-
 <img src="Next.jpg" alt="Image" width="500">
     <form id="answerForm2">
         <input type="radio" id="optionA" name="answer2" value="A">
