--- a/math/balance.html
+++ b/math/balance.html
@@ -3,14 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>天平</title>
+<title>scale</title>
 <style>
-  #left-pan, #right-pan, #third-box {
+  .container {
+    width: 800px;
+    height: 400px;
+    margin: 0 auto;
+  }
+  .pan, .box {
     width: 200px;
     height: 400px;
     border: 2px solid black;
     display: inline-block;
     background-color: white;
+    vertical-align: top;
   }
   .ball {
     width: 50px;
@@ -19,27 +25,40 @@
     border-radius: 50%;
     margin: 10px;
     cursor: pointer;
+    display: inline-block;
+    text-align: center;
+    line-height: 50px;
+    color: white;
+    font-size: 18px;
   }
-  #result {
+  .result {
     font-size: 24px;
     font-weight: bold;
   }
 </style>
 </head>
 <body>
-<div id="left-pan" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-<div id="right-pan" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-<div id="third-box" ondrop="drop(event)" ondragover="allowDrop(event)">
-  <div class="ball" draggable="true" ondragstart="drag(event)" id="ball1" data-weight="1"></div>
-  <div class="ball" draggable="true" ondragstart="drag(event)" id="ball2" data-weight="1"></div>
-  <div class="ball" draggable="true" ondragstart="drag(event)" id="ball3" data-weight="1"></div>
-  <div class="ball" draggable="true" ondragstart="drag(event)" id="ball4" data-weight="1"></div>
-  <div class="ball" draggable="true" ondragstart="drag(event)" id="ball5" data-weight="1"></div>
-  <div class="ball" draggable="true" ondragstart="drag(event)" id="ball6" data-weight="2"></div>
-  <div class="ball" draggable="true" ondragstart="drag(event)" id="ball7" data-weight="1"></div>
-  <div class="ball" draggable="true" ondragstart="drag(event)" id="ball8" data-weight="1"></div>
+<div class="container">
+  <div class="pan" id="left-pan" ondrop="drop(event)" ondragover="allowDrop(event)">
+    <h2>Left Pan</h2>
+  </div>
+  <div class="pan" id="right-pan" ondrop="drop(event)" ondragover="allowDrop(event)">
+    <h2>Right Pan</h2>
+  </div>
+  <div class="box" id="third-box" ondrop="drop(event)" ondragover="allowDrop(event)">
+    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball1" data-weight="1">1</div>
+    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball2" data-weight="1">2</div>
+    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball3" data-weight="1">3</div>
+    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball4" data-weight="1">4</div>
+    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball5" data-weight="1">5</div>
+    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball6" data-weight="2">6</div>
+    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball7" data-weight="1">7</div>
+    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball8" data-weight="1">8</div>
+  </div>
+  <div class="box" id="fourth-box" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+  <div class="box" id="fifth-box" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 </div>
-<div id="result"></div>
+<div class="result" id="result"></div>
 <script>
   function allowDrop(event) {
     event.preventDefault();
