--- a/math/balance.html
+++ b/math/balance.html
@@ -64,14 +64,15 @@
 window.onload = function() {
     var balls = document.querySelectorAll(".ball");
     balls.forEach(function(ball) {
-        ball.setAttribute("data-weight", "1");
+        ball.setAttribute("data-weight", "2");
         ball.innerText = ball.id.replace("ball", "");
     });
 
 
     var randomBallIndex = Math.floor(Math.random() * 8) + 1;
     var randomBall = document.getElementById("ball" + randomBallIndex);
-    randomBall.setAttribute("data-weight", "2");
+    var randomWeight = Math.random() < 0.5 ? 1 : 3; 
+    randomBall.setAttribute("data-weight", randomWeight.toString());
   };
 
 
@@ -80,14 +81,16 @@ window.onload = function() {
   }
   function showAnswer() {
     var balls = document.querySelectorAll(".ball");
-    var answer;
+    var differentBallIndex;
+    var ballWeight;
     balls.forEach(function(ball) {
-      if (ball.getAttribute("data-weight") === "2") {
-        answer = ball.innerText;
-      }
+        if (ball.getAttribute("data-weight") !== "2") {
+            differentBallIndex = ball.innerText;
+            ballWeight = ball.getAttribute("data-weight");
+        }
     });
 
-    alert("Correct answer：" + answer);
+    alert("Correct answer：Number " + differentBallIndex + "'s Weight: " + ballWeight + " Other's Weight: 2");
   }
 
 
