--- a/math/balance.html
+++ b/math/balance.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>scale</title>
+<title>Scale</title>
 <style>
   .container {
     width: 800px;
@@ -46,106 +46,119 @@
     <h2>Right Pan</h2>
   </div>
   <div class="box" id="third-box" ondrop="drop(event)" ondragover="allowDrop(event)">
-    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball1" data-weight="1">1</div>
-    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball2" data-weight="1">2</div>
-    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball3" data-weight="1">3</div>
-    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball4" data-weight="1">4</div>
-    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball5" data-weight="1">5</div>
-    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball6" data-weight="2">6</div>
-    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball7" data-weight="1">7</div>
-    <div class="ball" draggable="true" ondragstart="drag(event)" id="ball8" data-weight="1">8</div>
+    <!-- Balls will be dynamically generated here -->
   </div>
   <div class="box" id="fourth-box" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
   <div class="box" id="fifth-box" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 </div>
 <div class="result" id="result"></div>
 
+<form id="ballForm">
+  <label for="numBalls">Number of Balls:</label>
+  <input type="number" id="numBalls" name="numBalls" value="8" min="1" max="24">
+  <button type="submit">Start</button>
+</form>
+
 <script>
 window.onload = function() {
-    var balls = document.querySelectorAll(".ball");
-    balls.forEach(function(ball) {
-        ball.setAttribute("data-weight", "2");
-        ball.innerText = ball.id.replace("ball", "");
-    });
-
-
-    var randomBallIndex = Math.floor(Math.random() * 8) + 1;
-    var randomBall = document.getElementById("ball" + randomBallIndex);
-    var randomWeight = Math.random() < 0.5 ? 1 : 3; 
-    randomBall.setAttribute("data-weight", randomWeight.toString());
-  };
-
-
-  function reset() {
-     location.reload(); 
-  }
-  function showAnswer() {
-    var balls = document.querySelectorAll(".ball");
-    var differentBallIndex;
-    var ballWeight;
-    balls.forEach(function(ball) {
-        if (ball.getAttribute("data-weight") !== "2") {
-            differentBallIndex = ball.innerText;
-            ballWeight = ball.getAttribute("data-weight");
-        }
-    });
-
-    alert("Correct answer：Number " + differentBallIndex + "'s Weight: " + ballWeight + " Other's Weight: 2");
-  }
-
-
-  function allowDrop(event) {
+  var form = document.getElementById("ballForm");
+  form.addEventListener("submit", function(event) {
     event.preventDefault();
+    var numBalls = document.getElementById("numBalls").value;
+    generateBalls(numBalls);
+  });
+};
+
+function generateBalls(numBalls) {
+  var thirdBox = document.getElementById("third-box");
+  thirdBox.innerHTML = "";
+
+  for (var i = 1; i <= numBalls; i++) {
+    var ball = document.createElement("div");
+    ball.className = "ball";
+    ball.setAttribute("draggable", "true");
+    ball.setAttribute("ondragstart", "drag(event)");
+    ball.setAttribute("id", "ball" + i);
+    ball.setAttribute("data-weight", "2");
+    ball.innerText = i;
+    thirdBox.appendChild(ball);
   }
 
-  function drag(event) {
-    event.dataTransfer.setData("text", event.target.id);
-  }
+  var randomBallIndex = Math.floor(Math.random() * numBalls) + 1;
+  var randomBall = document.getElementById("ball" + randomBallIndex);
+  var randomWeight = Math.random() < 0.5 ? 1 : 3; 
+  randomBall.setAttribute("data-weight", randomWeight.toString());
+}
 
-  function drop(event) {
-    event.preventDefault();
-    var data = event.dataTransfer.getData("text");
-    var target = event.target;
-
-    if (target.classList.contains("ball")) {
-      target.parentNode.appendChild(document.getElementById(data));
-    } else {
-      target.appendChild(document.getElementById(data));
+function reset() {
+  location.reload(); 
+}
+function showAnswer() {
+  var balls = document.querySelectorAll(".ball");
+  var differentBallIndex;
+  var ballWeight;
+  balls.forEach(function(ball) {
+    if (ball.getAttribute("data-weight") !== "2") {
+      differentBallIndex = ball.innerText;
+      ballWeight = ball.getAttribute("data-weight");
     }
+  });
 
-    updateBalance();
+  alert("Correct answer: Number " + differentBallIndex + "'s Weight: " + ballWeight + ", Others' Weight: 2");
+}
+
+function allowDrop(event) {
+  event.preventDefault();
+}
+
+function drag(event) {
+  event.dataTransfer.setData("text", event.target.id);
+}
+
+function drop(event) {
+  event.preventDefault();
+  var data = event.dataTransfer.getData("text");
+  var target = event.target;
+
+  if (target.classList.contains("ball")) {
+    target.parentNode.appendChild(document.getElementById(data));
+  } else {
+    target.appendChild(document.getElementById(data));
   }
 
-  function updateBalance() {
-    var leftPan = document.getElementById("left-pan");
-    var rightPan = document.getElementById("right-pan");
-    var result = document.getElementById("result");
+  updateBalance();
+}
 
-    var leftWeight = calculateWeight(leftPan);
-    var rightWeight = calculateWeight(rightPan);
+function updateBalance() {
+  var leftPan = document.getElementById("left-pan");
+  var rightPan = document.getElementById("right-pan");
+  var result = document.getElementById("result");
 
-    if (leftWeight === rightWeight) {
-      leftPan.style.backgroundColor = rightPan.style.backgroundColor = "green";
-      result.innerText = "balance";
-    } else if (leftWeight > rightWeight) {
-      leftPan.style.backgroundColor = "green";
-      rightPan.style.backgroundColor = "white";
-      result.innerText = "left down";
-    } else {
-      leftPan.style.backgroundColor = "white";
-      rightPan.style.backgroundColor = "green";
-      result.innerText = "right down";
-    }
+  var leftWeight = calculateWeight(leftPan);
+  var rightWeight = calculateWeight(rightPan);
+
+  if (leftWeight === rightWeight) {
+    leftPan.style.backgroundColor = rightPan.style.backgroundColor = "green";
+    result.innerText = "Balance";
+  } else if (leftWeight > rightWeight) {
+    leftPan.style.backgroundColor = "green";
+    rightPan.style.backgroundColor = "white";
+    result.innerText = "Left Down";
+  } else {
+    leftPan.style.backgroundColor = "white";
+    rightPan.style.backgroundColor = "green";
+    result.innerText = "Right Down";
   }
+}
 
-  function calculateWeight(pan) {
-    var balls = pan.querySelectorAll(".ball");
-    var totalWeight = 0;
-    balls.forEach(function(ball) {
-      totalWeight += parseInt(ball.getAttribute("data-weight"));
-    });
-    return totalWeight;
-  }
+function calculateWeight(pan) {
+  var balls = pan.querySelectorAll(".ball");
+  var totalWeight = 0;
+  balls.forEach(function(ball) {
+    totalWeight += parseInt(ball.getAttribute("data-weight"));
+  });
+  return totalWeight;
+}
 </script>
 <button onclick="reset()">Reset</button>
 <button onclick="showAnswer()">Show Answer</button>
