--- a/math/balance.html
+++ b/math/balance.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Scale</title>
+<h2>Finding the ball with a different weight by weighing the least time</h2>
 <style>
   .container {
     width: 1024px;
@@ -57,6 +58,7 @@
 <button onclick="reset()">Reset</button>
 <button onclick="showAnswer()">Show Answer</button></div>
 <p></p>
+<div class="result" id="result"></div>
 <p></p>
   <div class="pan" id="left-pan" align="left" ondrop="drop(event)" ondragover="allowDrop(event)">
     <h2>Left Pan</h2>
@@ -68,7 +70,7 @@
 
 
 </div>
-<div class="result" id="result"></div>
+
 
 
 
