--- a/today.html
+++ b/today.html
@@ -22,6 +22,6 @@
   <h1>Today's Weather</h1>
   <div id="weather-data"></div>
   
-  <script src="script.js"></script>
+  <script src="script1.js"></script>
 </body>
 </html>
