--- a/today.html
+++ b/today.html
@@ -21,7 +21,7 @@
 <body class="dark-mode">
   <h1>Today's Weather</h1>
   <div id="weather-data"></div>
-  
+  <img src="e.png" alt="Description of the image">
   <script src="script1.js"></script>
 </body>
 </html>
