--- a/today.html
+++ b/today.html
@@ -23,5 +23,10 @@
   <div id="weather-data"></div>
   <img src="e.png" alt="Description of the image">
   <script src="script1.js"></script>
+  <script>
+    setInterval(function() {
+      location.reload();
+    }, 5000);
+  </script>
 </body>
 </html>
