--- a/today.html
+++ b/today.html
@@ -22,7 +22,7 @@
   <h1>Today's Weather</h1>
   <div id="weather-data"></div>
   <img src="e.png" alt="Description of the image">
-  <script src="script1.js"></script>
+  <script src="script.js"></script>
   <script>
     setInterval(function() {
       location.reload();
