--- a/today.html
+++ b/today.html
@@ -7,7 +7,7 @@
   <style>
     body {
       background-color: #ffffff;
-      color: #000000;
+      color: #ffffff;
       transition: background-color 0.3s ease, color 0.3s ease;
       display: flex;
       justify-content: center;
@@ -103,7 +103,7 @@
     <span class="dot" onclick="scrollToPage(0)"></span>
     <span class="dot" onclick="scrollToPage(1)"></span>
   </div>
-  <script src="scriptV3.js"></script>
+  <script src="scriptV4.js"></script>
   <script>
     function scrollToPage(pageIndex) {
       const pages = document.querySelectorAll('.page');
@@ -122,7 +122,7 @@
   <script>
     setInterval(function() {
       location.reload();
-    }, 10000);
+    }, 20000);
   </script>
 </body>
 </html>
