--- a/today.html
+++ b/today.html
@@ -12,8 +12,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
+
     }
 
 
@@ -26,7 +25,7 @@
     .container {
       display: flex;
       overflow-x: hidden; 
-      height: 100vh;
+
     }
 
     .page {
@@ -69,8 +68,8 @@
 
     .dot {
       display: inline-block;
-      width: 10px;
-      height: 10px;
+      width: 20px;
+      height: 20px;
       background-color: #cccccc;
       border-radius: 50%;
       margin: 0 5px;
@@ -89,21 +88,16 @@
 <body>
 
   <div class="container">
-
-    <div class="page content-container" id="weather-data">
-    </div>
-
-
-    <div class="page" id="suggestions-data">
-
+    <div class="page content-container" id="weather-data"></div>
+    <div class="page" id="suggestions-data"></div>
+    <div class="page"><h1>Weather Station</h1><div><img src="MyWeatherStation.jpg" alt="weather station" width="400" height="350"></div></div>
   </div>
-
-
   <div class="dots">
     <span class="dot" onclick="scrollToPage(0)"></span>
     <span class="dot" onclick="scrollToPage(1)"></span>
+    <span class="dot" onclick="scrollToPage(2)"></span>
   </div>
-  <script src="scriptV4.js"></script>
+  <script src="scriptV5.js"></script>
   <script>
     function scrollToPage(pageIndex) {
       const pages = document.querySelectorAll('.page');
