--- a/index.html
+++ b/index.html
@@ -1,252 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minesweeper</title>
-    <style>
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(10, 30px);
-            grid-gap: 2px;
-        }
-        .cell {
-            width: 30px;
-            height: 30px;
-            background-color: #ccc;
-            border: 1px solid #999;
-            text-align: center;
-            line-height: 30px;
-            cursor: pointer;
-        }
-        .mine {
-            background-color: #ccc;
-        }
-        .flagged::before {
-            content: "🚩";
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome to My Ecowitt Weather Station</title>
+  <style>
+    body {
+      background-color: #ffffff;
+      color: #ffffff;
+      transition: background-color 0.3s ease, color 0.3s ease;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+    }
+
+
+
+    body.dark-mode {
+      background-color: #333333;
+      color: #ffffff;
+    }
+
+    .container {
+      display: flex;
+      overflow-x: hidden; 
+
+    }
+
+    .page {
+      flex: 0 0 100%;
+      scroll-snap-align: start;
+      scroll-snap-stop: always;
+    }
+
+
+
+
+    h1 h2 {
+      color: #333333;
+      text-align: center;
+      padding-top: 20px;
+    }
+
+    .button {
+      display: block;
+      margin: 20px auto;
+      padding: 10px 20px;
+      background-color: #008cba;
+      color: #ffffff;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+
+    .button:hover {
+      background-color: #005f75;
+    }
+
+
+    .dots {
+      text-align: center;
+      position: fixed;
+      bottom: 20px;
+      width: 100%;
+    }
+
+    .dot {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      background-color: #cccccc;
+      border-radius: 50%;
+      margin: 0 5px;
+      cursor: pointer;
+    }
+
+    .content-container {
+      text-align: center;
+    }
+
+    .dot.active {
+      background-color: #008cba;
+    }
+  </style>
 </head>
 <body>
-    <div id="controls">
-        <label for="minesInput">Number of Mines (1-10): </label>
-        <input type="number" id="minesInput" min="1" max="10" value="10">
 
-        <button onclick="startGame()">Start Game</button>
+  <div class="container">
+    <div class="page content-container" id="weather-data"></div>
+    <div class="page" id="suggestions-data"></div>
+    <div class="page"><h1>Weather Station</h1>
+    <div id="weather-station">
+    
     </div>
-    <div class="grid" id="grid"></div>
-
-    <script>
-        const rows = 10;
-        const cols = 10;
-        let mines = 10;
-        let grid = document.getElementById('grid');
-        let cells = [];
-        let mineLocations = [];
-        let revealedCount = 0;
-
-        // start game
-        function startGame() {
-            let minesInput = document.getElementById('minesInput');
-            let rows = document.getElementById('rowsInput');
-            let cols = document.getElementById('colsInput');
-            mines = parseInt(minesInput.value);
-            if (mines < 1 || mines > 10) {
-                alert('Please enter a number between 1 and 10 for the number of mines.');
-                return;
-            }
-            resetGame();
-            placeMines();
+    </div>
+  </div>
+  <div class="dots">
+    <span class="dot" onclick="scrollToPage(0)"></span>
+    <span class="dot" onclick="scrollToPage(1)"></span>
+    <span class="dot" onclick="scrollToPage(2)"></span>
+  </div>
+  <script src="scriptV6.js"></script>
+  <script>
+    function scrollToPage(pageIndex) {
+      const pages = document.querySelectorAll('.page');
+      const dot = document.querySelectorAll('.dot');
+      pages[pageIndex].scrollIntoView({ behavior: 'smooth' });
+      dot.forEach((dot, index) => {
+        if (index === pageIndex) {
+          dot.classList.add('active');
+        } else {
+          dot.classList.remove('active');
         }
-
-        // reseat game
-        function resetGame() {
-            cells.forEach(cell => {
-                cell.classList.remove('mine', 'revealed', 'flagged');
-                cell.textContent = '';
-                cell.style.backgroundColor = "#ccc";
-            });
-            mineLocations = [];
-            revealedCount = 0;
-        }
-
-// Refresh the page
-function refreshPage() {
-    location.reload();
-}
-
-
-        // create cells
-        function createGrid() {
-
-            for (let i = 0; i < rows; i++) {
-                for (let j = 0; j < cols; j++) {
-                    let cell = document.createElement('div');
-                    cell.classList.add('cell');
-                    cell.dataset.row = i;
-                    cell.dataset.col = j;
-                    cell.addEventListener('click', handleClick);
-                    cell.addEventListener('contextmenu', handleRightClick);
-                    cell.addEventListener('touchstart', handleTouchStart);
-                    cell.addEventListener('touchend', handleTouchEnd);
-                    grid.appendChild(cell);
-                    cells.push(cell);
-                }
-            }
-        }
-
-        // place mines
-        function placeMines() {
-            for (let i = 0; i < mines; i++) {
-                let row = Math.floor(Math.random() * rows);
-                let col = Math.floor(Math.random() * cols);
-                let index = row * cols + col;
-                if (!mineLocations.includes(index)) {
-                    mineLocations.push(index);
-                    cells[index].classList.add('mine');
-                } else {
-                    i--;
-                }
-            }
-        }
-
-        // left click
-     function handleClick(event) {
-            let cell = event.target;
-            if (!cell.classList.contains('flagged')) {
-                let row = parseInt(cell.dataset.row);
-                let col = parseInt(cell.dataset.col);
-                if (cell.classList.contains('mine')) {
-                    revealMines();
-                    alert('Game Over! You clicked on a mine!');
-                } else {
-                    let count = countSurroundingMines(row, col);
-                    if (count === 0) {
-                        revealEmptyCells(row, col);
-                    } else {
-                        cell.textContent = count;
-                    }
-                    cell.style.backgroundColor = '#fff';
-                    revealedCount++;
-                    if (revealedCount === rows * cols - mines) {
-                        alert('Congratulations! You win!');
-                    }
-                }
-            }
-        }
-
-        // long press
-        let longPressTimer;
-        function handleTouchStart(event) {
-            longPressTimer = setTimeout(() => {
-                let cell = event.target;
-                if (!cell.classList.contains('revealed')) {
-                    if (!cell.classList.contains('flagged')) {
-                        cell.classList.add('flagged');
-                  checkWin();
-                    } else {
-                        cell.classList.remove('flagged');
-                    }
-                }
-            }, 500); 
-        }
-
-        // cancel touch
-        function handleTouchEnd() {
-            clearTimeout(longPressTimer);
-        }
-
-        // right click
-        function handleRightClick(event) {
-            event.preventDefault();
-            let cell = event.target;
-            if (!cell.classList.contains('flagged')) {
-                cell.classList.add('flagged');
-                checkWin();
-            } else {
-                cell.classList.remove('flagged');
-            }
-        }
-
-        // count surrounding mines
-        function countSurroundingMines(row, col) {
-            let count = 0;
-            for (let i = row - 1; i <= row + 1; i++) {
-                for (let j = col - 1; j <= col + 1; j++) {
-                    if (i >= 0 && i < rows && j >= 0 && j < cols) {
-                        let index = i * cols + j;
-                        if (mineLocations.includes(index)) {
-                            count++;
-                        }
-                    }
-                }
-            }
-            return count;
-        }
-
-        // reveal mines
-        function revealMines() {
-            mineLocations.forEach(index => {
-                cells[index].textContent = '💣';
-            });
-        }
-
-
-        // reveal empty cells
-        function revealEmptyCells(row, col) {
-            let visited = new Set();
-            let queue = [{row: row, col: col}];
-            while (queue.length > 0) {
-                let {row, col} = queue.shift();
-                if (!visited.has(`${row}-${col}`)) {
-                    let index = row * cols + col;
-                    let cell = cells[index];
-                    cell.style.backgroundColor = '#fff';
-                    visited.add(`${row}-${col}`);
-                    let count = countSurroundingMines(row, col);
-                    if (count === 0) {
-                        for (let i = row - 1; i <= row + 1; i++) {
-                            for (let j = col - 1; j <= col + 1; j++) {
-                                if (i >= 0 && i < rows && j >= 0 && j < cols) {
-                                    queue.push({row: i, col: j});
-                                }
-                            }
-                        }
-                    } else {
-                        cell.textContent = count;
-                    }
-                }
-            }
-        }
-
-// check if win
-function checkWin() {
-    let flaggedMines = 0;
-    cells.forEach(cell => {
-        if (cell.classList.contains('flagged') && cell.classList.contains('mine')) {
-            flaggedMines++;
-        }
-    });
-    if (flaggedMines === mines) {
-        alert('Congratulations! You win!');
+      });
     }
-}
-createGrid(); 
+  </script>
 
-document.addEventListener('DOMContentLoaded', startGame);
-</script>
-
-<h1>Minesweeper Instructions</h1>
-    <p>Welcome to Minesweeper! Here are the rules:</p>
-    <ol>
-        <li><strong>Start the Game:</strong> Click the "Start Game" button.</li>
-        <li><strong>Revealing Cells:</strong> Click on a square to reveal what's underneath.</li>
-        <li><strong>Avoid Mines:</strong> Be careful! Some squares have mines hidden underneath them. If you click on a mine, you lose!</li>
-        <li><strong>Numbers Show Clues:</strong> If a square doesn't have a mine, it will show a number indicating how many mines are nearby. For example, if you see the number "3" on a square, it means that there are 3 mines surrounding that square.</li>
-<img src="exampleV1.png" alt="Minesweeper Image" width="100">
-        <li><strong>Use Flags:</strong> If you think a square has a mine, you can put a flag on it to mark it.</li>
-        <li><strong>Winning the Game:</strong> Try to uncover all the squares without clicking on any mines to win the game!</li>
-    </ol>
-    <p>Remember to have fun and be careful!</p>
+  <script>
+    setInterval(function() {
+      location.reload();
+    }, 20000);
+  </script>
 </body>
 </html>
