--- a/maze.html
+++ b/maze.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Simple Maze Game with Enemies</title>
-<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Maze Game with Enemies</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="maze"></div>
-<script src="scriptV1.js"></script>
+    <div class="container">
+        <div id="maze"></div>
+        <div id="gameExplanation">
+    <h2>They all want me</h2>
+    <h2>How to Play</h2>
+    <p>
+        This is a fun game where you are a character trying to find your school.
+    </p>
+    <p>
+        You move around using the arrow keys on your keyboard. Try to avoid the universities, which are the pictures you see like 'harvard.png', 'mit.png', etc. If any university catched you, you have to restart!
+    </p>
+    <p>
+        Your goal is to find your school, who is represented by the picture 'slps.png'. If you bump into your school, you win the game!
+    </p>
+    <p>
+        The game will keep running until you win. Have fun finding your school!
+    </p>
+</div>
+<script src="scriptV2.js"></script>
 </body>
 </html>
-
-
