--- a/maze.html
+++ b/maze.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Maze Game with Enemies</title>
+    <title>They all want me</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,6 +25,11 @@
         The game will keep running until you win. Have fun finding your school!
     </p>
 </div>
-<script src="scriptV2.js"></script>
+<audio id="audio" controls autoplay>
+    <source src="background_music.mp3" type="audio/mpeg">
+  </audio>
+
+</script>
+<script src="scriptV3.js"></script>
 </body>
 </html>
