--- a/maze.html
+++ b/maze.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+<div class="corner top-left"></div>
         <div id="maze"></div>
         <div id="gameExplanation">
     <h2>They all want me</h2>
@@ -30,6 +31,6 @@
   </audio>
 
 </script>
-<script src="scriptV5.js"></script>
+<script src="scriptV6.js"></script>
 </body>
 </html>
