--- a/cannon.html
+++ b/cannon.html
@@ -20,6 +20,6 @@
     <p>Last Power: <span id="power">0</span></p>
   </div>
 
-  <script src="game.js"></script>
+  <script src="gameV1.js"></script>
 </body>
 </html>
