--- a/walle.html
+++ b/walle.html
@@ -38,7 +38,7 @@
     const enemyBulletSpeed = 5;
 
     const enemyImg = new Image();
-    enemyImg.src = 'enemy.png';
+    enemyImg.src = 'enemywalle.png';
 
     // Load player and enemy images
     playerImg.onload = function() {
