--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         body {
             font-family: Arial, sans-serif;
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-start;
             padding: 20px;
         }
         .bead-library, .design-area {
@@ -49,7 +49,7 @@
             width: 400px;
             height: 400px;
             border-radius: 50%;
-            margin: auto;
+            margin-left: 20px;
             background: #f9f9f9;
         }
         .design-area.light {
