--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <button onclick="updateBeadCount()">Set Bead Count</button>
         </div>
         <div style="margin-top: 10px; padding: 10px; border-top: 1px solid #ccc;">
-            <h3>This is a desktop-only web tool. Please use a larger screen for the best experience.</h3>
+            <p>This is a desktop-only web tool. Please use a larger screen for the best experience.<p>
             <h4>Instructions:</h4>
             <p><strong>Step 1:</strong> Click the <strong>Set Bead Count</strong> button to <strong>Start</strong> your design.</p>
             <p><strong>Step 2:</strong> <strong>Single Click</strong> on a bead in the library to add it to the design area.</p>
