--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
         </div>
         <div style="margin-top: 10px;">
             <input type="number" id="bead-count" value="20" min="1" max="50">
-            <button onclick="updateBeadCount()">Set Bead Count</button>
+            <button onclick="updateBeadCount()">Set Bead Count & Start</button>
         </div>
         <div style="margin-top: 10px; padding: 10px; border-top: 1px solid #ccc;">
             <p>This is a desktop-only web tool. Please use a larger screen for the best experience.<p>
             <h4>Instructions:</h4>
-            <p><strong>Step 1:</strong> Click the <strong>Set Bead Count</strong> button to <strong>Start</strong> your design.</p>
+            <p><strong>Step 1:</strong> Click the <strong>Set Bead Count & Start</strong> button to <strong>Start</strong> your design.</p>
             <p><strong>Step 2:</strong> <strong>Single Click</strong> on a bead in the library to add it to the design area.</p>
             <p><strong>Step 3:</strong> <strong>Double Click</strong> on a bead in the design area to remove it.</p>
             <p><strong>Step 4:</strong> <strong>Drag and Drop</strong> a bead from the design area to the <em>center of the circle</em> to remove it.</p>
