--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
             padding: 20px;
             width: 40%;
         }
+	#center-trash-bin {
+    		position: absolute;
+    		width: 20px;
+    		height: 20px;
+    		top: 50%;
+    		left: 50%;
+    		transform: translate(-50%, -50%);
+    		cursor: pointer;
+        }
         .bead {
             border-radius: 50%;
             display: inline-block;
@@ -122,7 +131,16 @@
         </div>
     </div>
     <div class="design-area dark" id="design-area" ondragover="event.preventDefault()" ondrop="drop(event)">
-        <div id="center-point" style="position: absolute; width: 8px; height: 8px; background: black; border-radius: 50%; top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
+<div id="center-trash-bin">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect x="6" y="8" width="12" height="10" stroke="black" stroke-width="2" fill="white"/>
+        <path d="M9 8V5H15V8" stroke="black" stroke-width="2"/>
+        <line x1="9" y1="11" x2="9" y2="16" stroke="black" stroke-width="2"/>
+        <line x1="12" y1="11" x2="12" y2="16" stroke="black" stroke-width="2"/>
+        <line x1="15" y1="11" x2="15" y2="16" stroke="black" stroke-width="2"/>
+        <line x1="4" y1="8" x2="20" y2="8" stroke="black" stroke-width="2"/>
+    </svg>
+</div>
    </div>
     <script>
         let beadCount = 20;
